--- a/templates/chomeurDetails.html.twig
+++ b/templates/chomeurDetails.html.twig
@@ -1,15 +1,5 @@
-{%extends 'base.html.twig' %}
-{% block stylesheets %}
-	<link rel="stylesheet" href="/css/chomeQuiPeut.css">
-{% endblock %}
-
-{% block body %}
 <div class="row">
    <h1>Détails de {{chomeur.nom}}</h1>
    Réside au {{ chomeur.adresse.numCivique}} {{chomeur.adresse.rue }}, ville {{chomeur.adresse.ville}}
+   <br>Né le {{chomeur.NAIssance|date('Y-m-d')}}
 </div>
-<div class='row'>
-   <a class='col-3 btn btn-info'
-      href='/'>Retour</a>
-</div>
-{% endblock %}
