--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -79,6 +79,8 @@
       href='{{path("rte_creer_offre_emploiHC")}}'>Ajouter offre emploi HC</a>
    <a class='col-3 btn btn-danger'
       href='{{path("rte_entrep_et_ses_offres")}}'>Afficher Entreprises</a>
+   <a class='col-3 btn btn-warning'
+      href='{{path("rte_creer_offre_emploi")}}'>Créer une ofre d'emploi</a>
 </div>
 <div id='modaleChomeur' title="Détails d'un chômeur">
 </div>
