--- a/templates/chomeurInscription.html.twig
+++ b/templates/chomeurInscription.html.twig
@@ -11,6 +11,8 @@
 
 <h1>Fournissez vos information:</h1>
 
+{{ form(formulaire) }}
+
 <a class='btn btn-danger' href="{{ path('accueil') }}" >Retour</a>
 
 {% endblock %}
