Début de la session avec symfo

--- a/templates/commun/zoneFlash.html.twig
+++ b/templates/commun/zoneFlash.html.twig
@@ -2,7 +2,7 @@
    {% for msg in app.flashes('notice') %}
       <article class='alert alert-warning'>{{msg}}</article>
    {% endfor %}
-   {% for msg in app.flashes('success') %}
+   {% for msg in app.flashes('succes') %}
       <article class='alert alert-success'>{{msg}}</article>
    {% endfor %}
    {% for msg in app.flashes('erreur') %}
