--- a/templates/creerOffreEmploi.html.twig
+++ b/templates/creerOffreEmploi.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
 {{ include('commun/zoneFlash.html.twig')}}
 
-<h1>Information sur l'offre d'emploi:</h1>
+<h1>Créer une offre d'emploi pour {{nomEntrep}}: </h1>
 
 {# form(formulaire) #}
 
