--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -72,16 +72,16 @@
 
 	</section>
 </div>
-<div class='row'>
+<!--div class='row'>
    <a class='col-3 btn btn-info'
-      href='{{path("rte_creer_chomeurHC")}}'>Ajouter un chomeur HC</a>
+      href='{#{path("rte_creer_chomeurHC")}#}'>Ajouter un chomeur HC</a>
    <a class='col-3 btn btn-info'
-      href='{{path("rte_creer_offre_emploiHC")}}'>Ajouter offre emploi HC</a>
+      href='{#{path("rte_creer_offre_emploiHC")}#}'>Ajouter offre emploi HC</a>
    <a class='col-3 btn btn-danger'
-      href='{{path("rte_entrep_et_ses_offres")}}'>Afficher Entreprises</a>
+      href='{#{path("rte_entrep_et_ses_offres")}#}'>Afficher Entreprises</a>
    <a class='col-3 btn btn-warning'
-      href='{{path("rte_creer_offre_emploi")}}'>Créer une ofre d'emploi</a>
-</div>
+      href='{#{path("rte_creer_offre_emploi")}#}'>Créer une ofre d'emploi</a>
+</div-->
 <div id='modaleChomeur' title="Détails d'un chômeur">
 </div>
 {% endblock %}
