--- a/public/css/chomeQuiPeut.css
+++ b/public/css/chomeQuiPeut.css
@@ -21,3 +21,8 @@
         background-color: yellow;
         font-size:20px;
     }
+    .pub{
+        color:lightpink;
+        background-color: black;
+
+    }
