--- a/templates/chomeurInscription.html.twig
+++ b/templates/chomeurInscription.html.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block javascripts %}
+<script src="js/unicite.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -14,7 +15,7 @@
 {{ form_start(formulaire)}}
 <div>
    {{ form_label(formulaire.nom, 'Nom:')}}
-   {{ form_widget(formulaire.nom)}}
+   {{ form_widget(formulaire.nom, {attr:{'onblur':'validerUnicite()'}} )}}
    <section class='erreur'>
    {{ form_errors(formulaire.nom)}}
    </section>
