--- a/templates/accueilChomeur.html.twig
+++ b/templates/accueilChomeur.html.twig
@@ -15,6 +15,14 @@
     <!-- Section des offres emplois -->
 	<!-- ---------------------------------------- -->
   <section class="col-6">
+
+	<article>
+		<img class="col-1" src='{{ asset(image) }}' alt='image non disponible'>
+		 <h5>Ajustez votre photo</h5>
+		  {{ form(formPhotoChomeur)}}
+    </article>  
+  
+
   	<ul>
         {% if entrepFiltree is defined %} 
 		   <h4>Emplois offert chez  {{ entrepFiltree.nom }}</h4>
