Revert "fin de la many to many + ajax + etc"
This reverts commit 907025bd0431a3a059dffebf3723174e5bf044ac.

retour à la situation pré-téléversement

--- a/templates/chomeurInscription.html.twig
+++ b/templates/chomeurInscription.html.twig
@@ -4,7 +4,6 @@
 {% endblock %}
 
 {% block javascripts %}
-<script src="js/unicite.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -15,7 +14,7 @@
 {{ form_start(formulaire)}}
 <div>
    {{ form_label(formulaire.nom, 'Nom:')}}
-   {{ form_widget(formulaire.nom, {attr:{'onblur':'validerUnicite()'}} )}}
+   {{ form_widget(formulaire.nom)}}
    <section class='erreur'>
    {{ form_errors(formulaire.nom)}}
    </section>
